--- a/School/School.csproj
+++ b/School/School.csproj
@@ -11,4 +11,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Features\Assignments\Views\AssignmentDelete.cs" />
+    </ItemGroup>
+
 </Project>
