--- a/.gitignore
+++ b/.gitignore
@@ -479,3 +479,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,rider
+
+School/.idea/.idea.School/.idea/
+
+School/appsettings.Development.json
